WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76620
[GTK] GTK's DRT not to log events for already defunct objects
https://bugs.webkit.org/show_bug.cgi?id=76620
Summary
[GTK] GTK's DRT not to log events for already defunct objects
Mario Sanchez Prada
Reported
2012-01-19 04:05:55 PST
If an AtkObject has emmitted the 'state-change::defunct' function it means it is not a valid object anymore, so we should not do anything about it, like trying to retrieve its name and role for loggint purposes, which is what printAccessibilityEvent() in Tools/DumpRenderTree/gtk/AccessibilityCallbacks.cpp does. Filing this bug now since recent changes in the repository (
r105253
) unveiled that not controlling this situation could lead to DRT segfaulting in some tests (like platform/gtk/accessibility/combo-box-collapsed-selection-changed.html, which is skipped at the time of this writing).
Attachments
Patch proposal
(5.24 KB, patch)
2012-01-19 04:36 PST
,
Mario Sanchez Prada
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mario Sanchez Prada
Comment 1
2012-01-19 04:10:21 PST
We can't fix
bug 76531
until we fix this other one, as DRT will segfault otherwise.
Mario Sanchez Prada
Comment 2
2012-01-19 04:36:37 PST
Created
attachment 123104
[details]
Patch proposal
Martin Robinson
Comment 3
2012-01-19 09:20:47 PST
Comment on
attachment 123104
[details]
Patch proposal View in context:
https://bugs.webkit.org/attachment.cgi?id=123104&action=review
> Tools/ChangeLog:8 > + Do not to log 'state-change:defunct' events.
Do not to log -> Do not log
Mario Sanchez Prada
Comment 4
2012-01-20 01:57:43 PST
Committed
r105496
: <
http://trac.webkit.org/changeset/105496
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug