[GTK] GTK's DRT not to log events for already defunct objects https://bugs.webkit.org/show_bug.cgi?id=76620

Reviewed by Martin Robinson.

Do not log 'state-change:defunct' events.

* DumpRenderTree/gtk/AccessibilityCallbacks.cpp:
(printAccessibilityEvent): Early return if a
'state-change:defunct' signal is passed.
(axObjectEventListener): Pass the signal name and value in
separate parameters to printAccessibilityEvent.

Canonical link: https://commits.webkit.org/93536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105496 268f45cc-cd09-0410-ab3c-d52691b4dbfc